# SignalServer

./: .gitignore  Cargo.toml  README.md  test.html  test2.html  test3.html
.github/workflows/: build.yml
src/: main.rs
src/config/: mod.rs
src/room/: client.rs  message.rs  message_queue.rs  messagehandler.rs  mod.rs
src/services/: MessagesExpire.rs  check_connections.rs  mod.rs
src/wshandler/: mod.rs
