[package]
name = "peerjs-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
axum = { version = "0.7.7", features = ["ws"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
futures-util = "0.3.31"
tower-http = { version = "0.6.1", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
    "catch-panic",
    "timeout",
    "fs",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = "0.7.15"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
rustls-pemfile = "2"
chrono = "0.4"
